cleanup of buildroot config;

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:jessie
+FROM debian:stretch
 
 RUN apt-get update && apt-get install -y build-essential pxz file git wget cpio python unzip bc sudo bmap-tools libncurses-dev && apt-get clean
 
